# agentic-money

./: .dockerignore  COMPANY.md  Dockerfile  README.md  RESEARCH-DEEP.md  RESEARCH.md  package-lock.json  package.json
docs/: index.html
integrations/langchain/: agm_tools.py
mcp/: package-lock.json  package.json
mcp/src/: index.ts
sdk/python/: pyproject.toml
sdk/python/agentic_money/: __init__.py  client.py
sdk/typescript/: package-lock.json  package.json
sdk/typescript/src/: client.ts  index.ts  types.ts
site/: index.html
src/: index.ts  types.ts
src/api/: auth.ts  server.ts
src/commands/: balance.ts  config.ts  receive.ts  send.ts  serve.ts  treasury.ts  wallet.ts
src/lib/: fees.ts  output.ts  store.ts
src/wallets/: bitcoin.ts  solana.ts  stablecoin.ts
