[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-money"
version = "0.1.0"
description = "Python SDK for Agentic Money - wallets for AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = ["httpx>=0.25.0"]
keywords = ["bitcoin", "ai", "agents", "stablecoins", "wallets"]

[project.urls]
Homepage = "https://github.com/bina/agentic-money"
